--- a/public/tutor-ward.html
+++ b/public/tutor-ward.html
@@ -71,6 +71,7 @@
                         </div>
                     </div>
                     <a href="tutor-onleave.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>On Leave</a>
+                    <a href="tutor-filter.html" class="nav-item nav-link"><i class="fa fa-filter me-2"></i>Filter</a>
                 </div>
             </nav>
         </div>
