--- a/public/warden-onleave.html
+++ b/public/warden-onleave.html
@@ -72,6 +72,7 @@
                         </div>
                     </div>
                     <a href="warden-onleave.html" class="nav-item nav-link active"><i class="fa fa-file-alt me-2"></i>On Leave</a>
+                    <a href="warden-filter.html" class="nav-item nav-link"><i class="fa fa-filter me-2"></i>Filter</a>
                 </div>
             </nav>
         </div>
