--- a/public/tutor-ward.html
+++ b/public/tutor-ward.html
@@ -19,9 +19,7 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+   
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -96,53 +94,14 @@
                             <span class="d-none d-lg-inline-flex">Sarah Lones</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="index.html" class="dropdown-item">Log Out</a>
+                            <a id="logout" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
             </nav>
 
             <!--Modal content starts-->
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">DETAILS</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="bg-light rounded h-100 p-4">
-                                <dl class="row mb-0">
-                                    <dt class="col-sm-4">Parent Name</dt>
-                                    <dd class="col-sm-8">Jose</dd>
-
-                                    <dt class="col-sm-4">Parent Ph No</dt>
-                                    <dd class="col-sm-8">9876554321</dd>
-
-                                    <dt class="col-sm-4">Guardian Name</dt>
-                                    <dd class="col-sm-8">Aryan</dd>
-
-                                    <dt class="col-sm-4">Guardian Ph No</dt>
-                                    <dd class="col-sm-8">6389076123</dd>
-
-                                    <dt class="col-sm-4">Warden Name</dt>
-                                    <dd class="col-sm-8">Cathrine</dd>
-
-                                    <dt class="col-sm-4">Warden Ph No</dt>
-                                    <dd class="col-sm-8">750985123</dd>
-
-                                </dl>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id="modals"></div>
             <!--Modal content ends-->
 
             <!-- Recent Sales Start -->
@@ -164,47 +123,8 @@
                                     <th scope="col">Details</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
+                            <tbody id="tbody">
+                             
                             </tbody>
                         </table>
                     </div>
@@ -225,15 +145,10 @@
     </div>
 
     <!-- JavaScript Libraries -->
+    <script type="module" src="./js/tutor-ward.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/chart/chart.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+   
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
