--- a/public/warden-ward.html
+++ b/public/warden-ward.html
@@ -96,53 +96,14 @@
                             <span class="d-none d-lg-inline-flex">Sarah Lones</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="index.html" class="dropdown-item">Log Out</a>
+                            <a id = "logout" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
             </nav>
 
             <!--Modal content starts-->
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">DETAILS</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="bg-light rounded h-100 p-4">
-                                <dl class="row mb-0">
-                                    <dt class="col-sm-4">Parent Name</dt>
-                                    <dd class="col-sm-8">Jose</dd>
-
-                                    <dt class="col-sm-4">Parent Ph No</dt>
-                                    <dd class="col-sm-8">9876554321</dd>
-
-                                    <dt class="col-sm-4">Guardian Name</dt>
-                                    <dd class="col-sm-8">Aryan</dd>
-
-                                    <dt class="col-sm-4">Guardian Ph No</dt>
-                                    <dd class="col-sm-8">6389076123</dd>
-
-                                    <dt class="col-sm-4">Tutor Name</dt>
-                                    <dd class="col-sm-8">Amirta</dd>
-
-                                    <dt class="col-sm-4">Tutor Ph No</dt>
-                                    <dd class="col-sm-8">750983923</dd>
-
-                                </dl>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id = "modals"></div>
             <!--Modal content ends-->
 
             <!-- Recent Sales Start -->
@@ -164,47 +125,8 @@
                                     <th scope="col">Details</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS145</td>
-                                    <td>Subha</td>
-                                    <td>III CSE C</td>
-                                    <td>9798402106</td>
-                                    <td>9383210978</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                </tr>
+                            <tbody id="tbody">
+                              
                             </tbody>
                         </table>
                     </div>
@@ -225,6 +147,7 @@
     </div>
 
     <!-- JavaScript Libraries -->
+    <script type="module" src="./js/warden-ward.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/chart/chart.min.js"></script>
