tutor-onleave ==done;

--- a/public/tutor-onleave.html
+++ b/public/tutor-onleave.html
@@ -94,7 +94,7 @@
                             <span class="d-none d-lg-inline-flex">Sarah Lones</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="index.html" class="dropdown-item">Log Out</a>
+                            <a id="logout" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
@@ -122,53 +122,8 @@
 
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr class = "table-danger">
-                                    <td>20EUCS127</td>
-                                    <td>Shasha</td>
-                                    <td>III CSE C</td>
-                                    <td>15/09/2002</td>
-                                    <td>Coimbatore</td>
-                                    <td>25/09/2022</td>
-                                    <td>08:00 PM</td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS127</td>
-                                    <td>Shasha</td>
-                                    <td>III CSE C</td>
-                                    <td>15/09/2002</td>
-                                    <td>Coimbatore</td>
-                                    <td>25/09/2022</td>
-                                    <td>08:00 PM</td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS127</td>
-                                    <td>Shasha</td>
-                                    <td>III CSE C</td>
-                                    <td>15/09/2002</td>
-                                    <td>Coimbatore</td>
-                                    <td>25/09/2022</td>
-                                    <td>08:00 PM</td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS127</td>
-                                    <td>Shasha</td>
-                                    <td>III CSE C</td>
-                                    <td>15/09/2002</td>
-                                    <td>Coimbatore</td>
-                                    <td>25/09/2022</td>
-                                    <td>08:00 PM</td>
-                                </tr>
-                                <tr>
-                                    <td>20EUCS127</td>
-                                    <td>Shasha</td>
-                                    <td>III CSE C</td>
-                                    <td>15/09/2002</td>
-                                    <td>Coimbatore</td>
-                                    <td>25/09/2022</td>
-                                    <td>08:00 PM</td>
-                                </tr>
-                            </tbody>
+                            <tbody id="tbody">
+                               </tbody>
                         </table>
                     </div>
                 </div>
@@ -188,6 +143,7 @@
     </div>
 
     <!-- JavaScript Libraries -->
+    <script type="module" src="./js/tutor-onleave.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/chart/chart.min.js"></script>
