--- a/public/warden-profile.html
+++ b/public/warden-profile.html
@@ -245,6 +245,17 @@ onAuthStateChanged(auth, (user) => {
     window.location.replace("index.html");
   }
 });
+function spin() {
+  const spin = document.getElementById("spinner");
+  spin.classList.remove("show");
+}
+
+var everythingLoaded = setInterval(function () {
+  if (/loaded|complete/.test(document.readyState)) {
+    clearInterval(everythingLoaded);
+    spin();
+  }
+}, 4000);
 
 const docRef = doc(db, "wardens", "keerthana");
 const docSnap = await getDoc(docRef);
