--- a/public/tutor-filter.html
+++ b/public/tutor-filter.html
@@ -65,7 +65,7 @@
                     <a href="tutor-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
                     <a href="tutor-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link active dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Leave Requests</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Leave Requests</a>
                         <div class="dropdown-menu bg-transparent border-0">
                             <a href="tutor-pending.html" class="dropdown-item">Pending</a>
                             <a href="tutor-approved.html" class="dropdown-item active">Approved</a>
