--- a/public/tutor-ward.html
+++ b/public/tutor-ward.html
@@ -55,7 +55,7 @@
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0">Sarah Lones</h6>
+                        <h6 class="mb-0" id="name3"></h6>
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
@@ -91,7 +91,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">Sarah Lones</span>
+                            <span class="d-none d-lg-inline-flex" id = "name2"></span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                             <a id="logout" class="dropdown-item">Log Out</a>
